# X-automation

./: .gitignore  __main__.py  pyproject.toml
src/agents/: agents.py
src/agents/prompts/: evaluator.md  instrucciones.md  orchestrator.md  publisher.md  writer.md
src/db/: publication_generation.db
src/db/knowledge/: chroma.sqlite3
src/docs/: empresa.md  estrategiaMarketing.md  formatoPublicaciones.md
src/publications/to-be-published/: puede-ia-aprobar-hilos-x-sin-ayuda-humana.md
src/tests/: test_knowledge_load.py
src/utils/: knowledge.py  memory.py  memory_tools.py  prompt_loader.py  tools.py
