[project]
name = "contentforgeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.3.3",
    "openai>=1.75.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.40",
    "textual>=3.1.0",
    "tweepy>=4.15.0",
]
